--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -9,7 +9,7 @@
 <body class="bodyfaq">
 <header>
     <nav>
-        <ul>
+        <ul>git
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="productos.html">Productos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
