--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -21,7 +21,7 @@
 <main>
     <section>
         <h1 class="preguntas">Preguntas Frecuentes</h1>
-        <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maxime debitis id nihil eius beatae libero soluta aperiam, sapiente nostrum ipsa ab magni officiis </p>
+        <p class="p">Loremm ipsum dolor sit amet consectetur adipisicing elit. Mollitia maxime debitis id nihil eius beatae libero soluta aperiam, sapiente nostrum ipsa ab magni officiis </p>
         <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, officiis iure id dolorum eaque rerum modi hic quos voluptates </p>
         <input class="preguntas2" type="text">
         <input class="preguntas2" type="text">
