--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -9,12 +9,12 @@
 <body class="bodyfaq">
 <header>
     <nav>
-        <ul>git
+        <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="faq.html">FaQ</a></li>
+            <li><a href="../pages/productos.html">Productos</a></li>
+            <li><a href="../pages/contacto.html">Contacto</a></li>
+            <li><a href="../pages/nostros.html">Nosotros</a></li>
+            <li><a href="/pages/faqs.html">FaQ</a></li>
         </ul>
     </nav>
 </header>
