--- a/pages/nostros.html
+++ b/pages/nostros.html
@@ -14,7 +14,7 @@
             <li><a href="productos.html">Productos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="faq.html">FaQ</a></li>
+            <li><a href="../pages/faqs.html">FaQ</a></li>
         </ul>
     </nav>
 </header>
