--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mi Pagina Web</title>
 <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="bodyprincipal">
     <header>
