probando usar sass

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>       
         <section>
         <div class="imgprincipal">  
-            <h1> Bienvenidos a Topachita</h1>
+            <h1 class="w-topachita"> Bienvenidos a Topachita</h1>
         </div>
         </section>
     </main>
