--- a/index.html
+++ b/index.html
@@ -10,25 +10,43 @@
 </head>
 <body class="bodyprincipal">
     <header>
-    <nav>
-        <ul>
-            <li><a href="../index.html"> Inicio</a></li>
-            <li><a href="./pages/productos.html">Productos</a></li>
-            <li><a href="./pages/contacto.html">Contacto</a></li>
-            <li><a href="./pages/nostros.html">Nosotros</a></li>
-            <li><a href="./pages/faqs.html">FaQ</a></li>
-        </ul>
-    </nav>
+        <nav class="navbar bg-body-tertiary fixed-top">
+            <div class="container-fluid">
+              <a class="navbar-brand pro-c" href="#">Proyecto coder</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon x-i"></span>
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Opciones</h5>
+                  <button type="button" class="btn-close btn-x" data-bs-dismiss="offcanvas" aria-label="Close">X</button>
+                </div>
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="" aria-current="page" href="./index.html">Inicio</a>
+                    </li>
+                    <li class="">
+                      <a class="" href="./pages/productos.html">Productos</a>
+                    </li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                    <li><a href="./pages/nostros.html">Nosotros</a></li>
+                    <li><a href="./pages/faqs.html">Faqs</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>       
         <section>
         <div class="imgprincipal">  
-            <h1 class="w-topachita"> Bienvenidos a Topachita</h1>
+            <h1 class="w-topachita"> Bienvenidos a Topachita's</h1>
         </div>
         </section>
     </main>
     <footer>
-    <h5>&copy; Derechos Reservados.Massei Franco</h5>
+    <h5 class="footer-i">&copy; Derechos Reservados.Massei Franco</h5>
     </footer>
 
 
