--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body class="bodycontacto">
 <header>
-    <nav>
+    <nav class="navbar-cont">
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="productos.html">Productos</a></li>
@@ -23,8 +22,8 @@
     <section>
         <img class="contacto1" src="../imagenes/contactanos.png" alt="contactanos">
         <h1 class="contactanos"> Comunicate con nosotros !</h1>
-        <img class="redes" src="../imagenes/logowsp.png" alt="logodewhatsapp">
-        <img class="redes" src="../imagenes/logoface.png" alt="logodefacebook">
+        <img class="redes" src="../imagenes/logowsp.png"alt="logodewhatsapp">
+        <img class="redes" src="../imagenes/logoface.png"alt="lodefacebook">
         <img src="../imagenes/logoig2.png" alt="logodeinstagram" class="redes">
         <form action="">
         <input class="datos" type="text">
