aplique cambios en productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
+
 <body class="bodyproductos">
     <header>
-        <nav>
+        <nav id="opciones">
             <ul>
-                <li  class="home"><a href="../index.html"> Inicio</a></li>
-                <li class="productos"><a href="../pages/productos.html">Productos</a></li>
-                <li class="contacto"><a href="../pages/contacto.html">Contacto</a></li>
-                <li class="Nosotros"><a href="../pages/nostros.html">Nosotros</a></li>
-                <li class="FaQ"><a href="../pages/faqs.html">FaQ</a></li>
+                <li><a href="../index.html"> Inicio</a></li>
+                <li><a href="../pages/productos.html">Productos</a></li>
+                <li><a href="../pages/contacto.html">Contacto</a></li>
+                <li><a href="../pages/nostros.html">Nosotros</a></li>
+                <li><a href="../pages/faqs.html">FaQ</a></li>
             </ul>
         </nav>
-        </header>
-        <main>
-            <h1 class="nuestrosproductos">Nuestros Productos</h1>
-            <section>
-                <p class="ropadeportiva">Ropa Deportiva</p><img src="../imagenes/deportiva.png" alt="">
-            <img class="calzade" src="../imagenes/calzade.png" alt="">
-                <p class="calzado2">Calzados</p><img src="../imagenes/calzado2.png" alt="">
-                <img class="calzado3" src="../imagenes/calzado3.png" alt="">
-                <p class="ropainterior">Ropa Interior</p></p><img src="../imagenes/ropainterior.png" alt="">
-                <img class="interior2" src="../imagenes/interior2.png" alt="">
-            </section>
-        </main>
-        <footer>
-            <h5>&copy;Derechos Reservados.Massei Franco.</h5>
-        </footer>
+    </header>
+    <main>
+        <h1 class="nuestrosproductos">Nuestros Productos</h1>
+        <section class="sec-p">
+            <p class="parrafo">Ropa Deportiva</p><img class="img-g" src="../imagenes/deportiva.png" alt="">
+            <img class="img-g" src="../imagenes/calzade.png" alt="">
+            <p class="parrafo">Calzados</p><img class="img-g" src="../imagenes/calzado2.png" alt="">
+            <img class="img-g" src="../imagenes/calzado3.png" alt="">
+            <p class="parrafo">Ropa Interior</p>
+            </p><img class="img-g" src="../imagenes/ropainterior.png" alt="">
+            <img class="img-g" src="../imagenes/interior2.png" alt="">
+        </section>
+    </main>
+    <footer>
+        <h5>&copy;Derechos Reservados.Massei Franco.</h5>
+    </footer>
 </body>
+
 </html>
