--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,9 +26,9 @@
         <img class="redes" src="../imagenes/logoface.png"alt="lodefacebook">
         <img src="../imagenes/logoig2.png" alt="logodeinstagram" class="redes">
         <form action="">
-        <input class="datos" type="text">
-        <input class="datos" type="text">
-        <input class="datos type="text">
+        <input class="datos" type="text" placeholder="Nombre">
+        <input class="datos" type="text" placeholder="Apellido">
+        <input class="datos type="text" placeholder="Asunto">
         </form>
         <textarea name="consulta" id="" cols="30">Dejanos tu consulta!</textarea>
         <form action="">
