--- a/pages/nostros.html
+++ b/pages/nostros.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nosotros</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/estilos.css">
-</head>
-<body class="bodynosotros">
-<header>
-    <nav>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
+  </head>
+  <body class="bodynosotros">
+    <header>
+      <nav>
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="../pages/faqs.html">FaQ</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="productos.html">Productos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="nosotros.html">Nosotros</a></li>
+          <li><a href="../pages/faqs.html">FaQ</a></li>
         </ul>
-    </nav>
-</header>
-<main>
-    <section>
+      </nav>
+    </header>
+    <main>
+      <section>
         <h1 class="titulo2">Quienes Somos ?</h1>
-        <h3 class="info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita </h3>
-        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia obcaecati sequi facere ab dolores, itaque neque excepturi dolor assumenda cupiditate unde distinctio</p>
-        <p class="tex2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus praesentium sunt aspernatur veniam dolores expedita est, ipsam similique, facilis, quas fuga tempore quod delectus repellendus itaque. Dicta ullam fugiat soluta.</p>
+        <h3 class="info">
+          Somos una Empresa dedicada a la venta de ropa deportiva femenina.
+        </h3>
+        <p class="texto">
+          Somos una empresa en desarrollo, que busca crecer en el ambito de las
+          ventas indumentarias.
+        </p>
+        <p class="tex2">Buscamos poder competir con las grandes empresas y postularnos en los primeros lugares en ventas.
+        </p>
         <h2 class="subtitulo2">Como Trabajamos ?</h2>
-        <p class="text3 ">lorem ipsum dolor sit amet, consectetu adipisicing elit. Temporibus</p>
-        <p class="text4">Lorem ipsum dolor sit amey, consectetu adipisicing elit. Temporibus</p>
-        <p class="text5"> Lorem ipsum dolor sit amey,consectetu adipisicing elit.</p>
-    </section>
-    <footer class="footer1" >
+        <p class="text3">
+          Trabajamos de una forma segura y competitiva.
+        </p>
+        <p class="text4">
+            De manera virtual/online o de forma presencial en nuestros locales.
+        </p>
+        <p class="text5">
+            Con atencion personalizada para brindarte seguridad a la hora de comprar tu producto.
+        </p>
+      </section>
+      <footer class="footer1">
         <h5 class="copyright">&copy;Derechos Reservados.Massei Franco.</h5>
-    </footer>
-</main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+      </footer>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
