cambios en nosotros y contacto

--- a/pages/nostros.html
+++ b/pages/nostros.html
@@ -12,7 +12,7 @@
   </head>
   <body class="bodynosotros">
     <header>
-      <nav>
+      <nav class="nav-nosotros">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
           <li><a href="productos.html">Productos</a></li>
@@ -29,17 +29,17 @@
           Somos una Empresa dedicada a la venta de ropa deportiva femenina.
         </h3>
         <p class="texto">
-          Somos una empresa en desarrollo, que busca crecer en el ambito de las
+          Topachita's es una empresa en desarrollo, que busca crecer en el ambito de las
           ventas indumentarias.
         </p>
-        <p class="tex2">Buscamos poder competir con las grandes empresas y postularnos en los primeros lugares en ventas.
+        <p class="text2">Buscamos poder competir con las grandes empresas y postularnos en los primeros lugares en ventas.
         </p>
         <h2 class="subtitulo2">Como Trabajamos ?</h2>
         <p class="text3">
-          Trabajamos de una forma segura y competitiva.
+            De manera virtual/online o de forma presencial en nuestros locales.
         </p>
         <p class="text4">
-            De manera virtual/online o de forma presencial en nuestros locales.
+            Trabajamos de una forma segura y competitiva.
         </p>
         <p class="text5">
             Con atencion personalizada para brindarte seguridad a la hora de comprar tu producto.
