cambios en las pages y responsive

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,9 +28,9 @@
         <form action="">
         <input class="datos" type="text" placeholder="Nombre">
         <input class="datos" type="text" placeholder="Apellido">
-        <input class="datos type="text" placeholder="Asunto">
+        <input class="datos" type="text" placeholder="Asunto">
         </form>
-        <textarea name="consulta" id="" cols="30">Dejanos tu consulta!</textarea>
+        <textarea name="consulta" id="consulta" cols="30">Dejanos tu consulta!</textarea>
         <form action="">
             <input type="submit">
         </form>
