--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FaQ</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/estilos.css">
-</head>
-<body class="bodyfaq">
-<header>
-    <nav>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../css/estilos.css" />
+  </head>
+  <body class="bodyfaq">
+    <header>
+      <nav class="nav-faqs">
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="../pages/productos.html">Productos</a></li>
-            <li><a href="../pages/contacto.html">Contacto</a></li>
-            <li><a href="../pages/nostros.html">Nosotros</a></li>
-            <li><a href="/pages/faqs.html">FaQ</a></li>
+          <li><a href="../index.html">Inicio</a></li>
+          <li><a href="../pages/productos.html">Productos</a></li>
+          <li><a href="../pages/contacto.html">Contacto</a></li>
+          <li><a href="../pages/nostros.html">Nosotros</a></li>
+          <li><a href="/pages/faqs.html">FaQ</a></li>
         </ul>
-    </nav>
-</header>
-<main>
-    <section>
+      </nav>
+    </header>
+    <main>
+      <section>
         <h1 class="preguntas">Preguntas Frecuentes</h1>
-        <p class="p">Loremm ipsum dolor sit amet consectetur adipisicing elit. Mollitia maxime debitis id nihil eius beatae libero soluta aperiam, sapiente nostrum ipsa ab magni officiis </p>
-        <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, officiis iure id dolorum eaque rerum modi hic quos voluptates </p>
-        <input class="preguntas2" type="text">
-        <input class="preguntas2" type="text">
-        <input class="preguntas2" type="text">
-        <input class="preguntas2" type="text">
-        <input class="preguntas2" type="text">
-    </section>
-    <footer>
+        <p class="p">
+          Aqui se incluyen las preguntas más comunes que los usuarios o clientes
+          pueden tener sobre los productos, servicios o cualquier tema
+          relacionado
+        </p>
+        <p class="p2">
+          Aquí tienes algunas ideas de preguntas que quieras saber,
+          dependiendo del contexto:
+        </p>
+        <input class="preguntas2" type="text" placeholder="¿Cómo funciona Topachita's?" />
+        <input class="preguntas2" type="text" placeholder="¿Está disponible en mi país o región?"/>
+        <input class="preguntas2" type="text" placeholder="¿Cómo puedo hacer un pedido?"/>
+        <input class="preguntas2" type="text" placeholder="¿Puedo cancelar o modificar mi pedido?"/>
+        <input class="preguntas2" type="text" placeholder="¿Cuánto tarda el envío?"/>
+      </section>
+      <footer>
         <h5 class="copyfaq">&copy;Derechos Reservados.Massei Franco.</h5>
-    </footer>
-</main>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+      </footer>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
