--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Pagina Web</title>
+  <meta name="description" content="En el menu de opciones podes encontrar todo lo que brindamos">
+  <meta name="keywords" content="Proyecto,Productos,Contacto,Nosotros,Faqs">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-
   <link rel="stylesheet" href="./css/estilos.css">
+  <title>Topachita's</title>
 </head>
 
 <body class="bodyprincipal">
