guarde los cambios

--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FaQ</title>
+    <meta name="description" content="Tenes respuestas a cualquier duda que te surga">
+    <meta name="keywords" content="Preguntas">
     <link rel="stylesheet" href="../css/estilos.css" />
+    <title>FaQs</title>
   </head>
   <body class="bodyfaq">
     <header>
