--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
+    <meta name="description" content="Mira todos los productos que ofrecemos para que encuentres tu mejor opcion">
+    <meta name="keywords" content="Productos">
     <link rel="stylesheet" href="../css/estilos.css">
+    <title>Productos</title>
 </head>
 
 <body class="bodyproductos">
