--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <meta name="description" content="Podes dejarnos tu consulta y contactarte con nosotros dejando tus datos en el formulario">
+    <meta name="keywords" content="Contacto">
     <link rel="stylesheet" href="../css/estilos.css">
+    <title>Contacto</title>
 </head>
 <body class="bodycontacto">
 <header>
